# kdebase

./: .gitignore  Doxyfile  Makefile.in  aclocal.m4  config.h.in  configure  configure.files  configure.in  configure.in.in  kdebase.kdevelop  kdebase.kdevses  startkde  subdirs
applnk/: Makefile.in
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: Makefile.in
drkonqi/: Makefile.in
kappfinder/: Makefile.in
kate/: Makefile.in
kcheckpass/: Makefile.in
kcminit/: Makefile.in
kcontrol/: Makefile.am  Makefile.in
kcontrol/iccconfig/: Makefile.am  configure.in.in  iccconfig.cpp  iccconfig.desktop  iccconfig.h  iccconfigbase.ui  iccconfigbase2.ui
kdcop/: Makefile.in
kdebugdialog/: Makefile.in
kdeeject/: Makefile.in  kdeeject
kdepasswd/: Makefile.in
kdeprint/: Makefile.in
kdesktop/: Makefile.in  bgmanager.cc  bgmanager.h  kdesktop.kcfg  kdiconview.cc  kfileividesktop.cpp  kfileividesktop.h  krootwm.cc  krootwm.h  minicli.cpp  minicli.h  (+1 more)
kwin/: KWinInterface.h  Makefile.am  Makefile.in  activation.cpp  atoms.cpp  bridge.cpp  bridge.h  bridge.hpp  client.cpp  client.h  events.cpp  geometry.cpp  geometrytip.cpp  group.cpp  killwindow.cpp  kwin.kcfg  kwinbindings.cpp  layers.cpp  main.cpp  manage.cpp  notifications.cpp  options.cpp  options.hpp  placement.cpp  placement.h  plugins.cpp  popupinfo.cpp  rules.cpp  sm.cpp  tabbox.cpp  tabbox.h  useractions.cpp  utils.cpp  utils.h  workspace.cpp  workspace.h
kwin/clients/: Makefile.am  Makefile.in  PORTING
kwin/clients/b2/: Makefile.in  b2client.cpp  b2client.h
kwin/clients/b2/config/: Makefile.in  config.cpp
kwin/clients/default/: Makefile.in  kdedefault.h
kwin/clients/default/config/: Makefile.in
kwin/clients/kbox/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  TODO  VERSION  blackbox.cpp  blackbox.desktop  blackbox.h
kwin/clients/kbox/config/: Makefile.am  config.cpp  config.h
kwin/clients/kbox/styles/: Makefile.am
kwin/clients/keramik/: Makefile.in  keramik.cpp  tiles.h
kwin/clients/keramik/config/: Makefile.in
kwin/clients/kwmtheme/: Makefile  Makefile.in
kwin/clients/kwmtheme/cli_installer/: Makefile  Makefile.in
kwin/clients/laptop/: Makefile.in
kwin/clients/modernsystem/: Makefile.in
kwin/clients/modernsystem/config/: Makefile.in
kwin/clients/plastik/: Makefile.in
kwin/clients/plastik/config/: Makefile.in
kwin/clients/quartz/: Makefile.in
kwin/clients/quartz/config/: Makefile.in
kwin/clients/redmond/: Makefile.in
kwin/clients/test/: Makefile  Makefile.in
kwin/clients/web/: Makefile.in  Web.cpp  web.desktop
kwin/data/: Makefile.in
kwin/include/: KWinInterface.h  kdecommon.hpp  qtcommon.hpp
kwin/include/core/: atoms.hpp  bridge.hpp  client.hpp  common.hpp  geometrytip.hpp  group.hpp  killwindow.hpp  main.hpp  notifications.hpp  options.hpp  placement.hpp  plugins.hpp  popupinfo.hpp  rules.hpp  sm.hpp  tabbox.hpp  utils.hpp  workspace.hpp
kwin/kcmkwin/: Makefile.in
kwin/kcmkwin/kwindecoration/: Makefile.in  kwindecoration.cpp  kwindecoration.desktop
kwin/kcmkwin/kwinoptions/: Makefile.in  kwinoptions.desktop  main.cpp  main.h  mouse.cpp  mouse.h  windows.cpp  windows.h
kwin/kcmkwin/kwinrules/: Makefile.am  Makefile.in  detectwidget.cpp  detectwidget.h  kcm.cpp  kcm.h  kwinrules.desktop  main.cpp  ruleslist.cpp  ruleslist.h  ruleswidget.cpp  ruleswidget.h  ruleswidgetbase.ui
kwin/killer/: Makefile.in  killer.cpp
kwin/kompmgr/: Makefile.in  kompmgr.c
kwin/lib/: Makefile.am  Makefile.in  kdecoration.h  kdecoration_p.h  kdecorationfactory.h
kwin/oldheaders/: Makefile.in
kwin/pics/: Makefile.in
kwin/tools/: Makefile  Makefile.in
kwin/tools/decobenchmark/: Makefile  Makefile.in
(+757 files in other folders)
