styles_DATA = Makro MerleyKay Clean CleanColor Artwiz Cthulhain Flux Minimal \
	Nyz Operation Outcomes Rampage Rancor Results Shade Spiff LemonSpace \
	Twice Blue Carbondioxide qnx-photon BlueNight bbs bluebox deep \
	fieron fieron2 frobozz frobust mbdtex miklos nyzclone paper \
	purplehaaze steelblue steelblue2 steelblue3 the_orange trisb \
	warp-xp

stylesdir = $(kde_datadir)/kwin/blackbox-styles

EXTRA_DIST=$(styles_DATA)

